Finalização das configurações de seguraça